# HackWagon22

./: Dockerfile  README.md  Voice_decode_bot.py  lint  main.py  manage.py  nginx.conf  pyproject.toml  requirements.txt  run  run.sh  settings.py  test.py  urls.py  views.py  wsgi.py
.github/workflows/: main_PR.yml  mypy.ini  pylint.yml
files/: 296976910.csv
forrest_app/: admin.py  apps.py  bd_scripts.py  bot.py  forms.py  keyboards.py  models.py
forrest_app/management/commands/: initadmin.py  start.py
forrest_app/migrations/: 0001_initial.py  0002_alter_botuser_state_itemsforconfirmation_items.py  0002_alter_group_admins.py  0002_items.py  0003_itemsforconfirmation.py  0003_timebot_alter_adminbotuser_options_and_more.py  0004_alter_botuser_state.py  0004_alter_teacher_options_homework_group_timetable_group.py  0005_alter_homework_group_alter_timetable_group.py
forrest_app/speech_recognition/: audio_processing.py  extended_pandas.py  file_processing.py  recognise.py
