[tool.poetry]
name = "bonum"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pytelegrambotapi = "^4.7.1"
django-jazzmin = "^2.6.0"
sqlparse = "^0.4.3"
asgiref = "^3.5.2"
django-stubs = {extras = ["compatible-mypy"], version = "^1.13.1"}
pydub = "^0.25.1"
pandas = "^1.5.2"
SpeechRecognition = "^3.9.0"

[tool.mypy]
warn_unused_configs = true
# disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
#warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_concatenate = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.pylint]
    [tool.pylint.'BASIC']
    docstring-min-length=20

    [tool.pylint.'MAIN']
    fail-under=8

    [tool.pylint.'MESSAGES CONTROL']
    disable=['missing-docstring', 'too-few-public-methods']

[tool.django-stubs]
django_settings_module = "settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
